package com.budgetbuddy.exception;

public class DuplicateUserException extends BudgetBuddyException {

    private static final long serialVersionUID = 1L;

    public DuplicateUserException(String message) {
        super(message);
    }
}
